Add vcr as dev dependency and fix google cloud storage api spec

--- a/example_api_specs/google_cloud_storage_v1.yml
+++ b/example_api_specs/google_cloud_storage_v1.yml
@@ -3277,6 +3277,7 @@ components:
       schema:
         enum:
           - json
+          - media
         type: string
     fields:
       description: Selector specifying which fields to include in a partial response.
