Fix google cloud storage api spec and reset changes to spec folder

--- a/example_api_specs/google_cloud_storage_v1.yml
+++ b/example_api_specs/google_cloud_storage_v1.yml
@@ -1571,7 +1571,8 @@ paths:
         content:
           application/octet-stream:
             schema:
-              $ref: "#/components/schemas/Object"
+              type: "string"
+              format: "binary"
       responses:
         "200":
           content:
