Add ext files and remove crystal_client_templates/base_object.mustache

--- a/crystal_client_config.yml
+++ b/crystal_client_config.yml
@@ -1,3 +1,11 @@
 templateDir: crystal_client_templates
 files:
   .ameba.yml: {}
+  ext/time.cr:
+    folder: src/google_cloud_storage/ext
+    destinationFilename: time.cr
+    templateType: SupportingFiles
+  ext/json/serialization.cr:
+    folder: src/google_cloud_storage/ext/json
+    destinationFilename: serialization.cr
+    templateType: SupportingFiles
