--- a/example_api_specs/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/example_api_specs/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -1562,13 +1562,25 @@ components:
             - UPPER
             - lower
             - ""
-        enum_integer:
+        enum_int32:
           type: integer
           format: int32
           enum:
             - 1
             - -1
-        enum_number:
+        enum_int64:
+          type: integer
+          format: int64
+          enum:
+            - 1
+            - -1
+        enum_float:
+          type: number
+          format: float
+          enum:
+            - 1.1
+            - -1.2
+        enum_double:
           type: number
           format: double
           enum:
