Implement enum classes

--- a/example_api_specs/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
+++ b/example_api_specs/petstore-with-fake-endpoints-models-for-testing-with-http-signature.yaml
@@ -1549,6 +1549,7 @@ components:
       type: object
       required:
         - enum_string_required
+        - outerEnumRquired
       properties:
         enum_string:
           type: string
@@ -1588,6 +1589,8 @@ components:
             - -1.2
         outerEnum:
           $ref: "#/components/schemas/OuterEnum"
+        outerEnumRquired:
+          $ref: "#/components/schemas/outerEnumRquired"
         outerEnumInteger:
           $ref: "#/components/schemas/OuterEnumInteger"
         outerEnumDefaultValue:
@@ -1749,6 +1752,13 @@ components:
         - placed
         - approved
         - delivered
+    outerEnumRquired:
+      nullable: false
+      type: string
+      enum:
+        - started
+        - in_progress
+        - completed
     OuterEnumInteger:
       type: integer
       enum:
