Fix ameba errors and add CI config file

--- a/crystal_client_config.yml
+++ b/crystal_client_config.yml
@@ -1,6 +1,7 @@
 templateDir: crystal_client_templates
 files:
   .ameba.yml: {}
+  .github/workflows/ci.yml: {}
   core.mustache:
     folder: src/
     destinationFilename: core.cr
